<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Servicio Remoto</string>
    <string name="action_settings">Settings</string>
    <string name="reproduccionMusica">Servicio de reprodución de música</string>
    <string name="conectar">Conectar servicio</string>
    <string name="desconectar">Desconectar servicio</string>
    <string name="reproducir">Reproducir</string>
    <string name="avanzar">Avanzar</string>

</resources>
