<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reproduccionMusica"/>
    
    <Button 
        android:id="@+id/boton_arrancar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conectar"/>
    
    <Button 
        android:id="@+id/boton_detener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desconectar"/>

    <Button
        android:id="@+id/boton_reproducir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reproducir" />
    
    <Button
        android:id="@+id/boton_avanzar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avanzar" />    
    
</LinearLayout>
